api spec and models added
